css/style.css
/*colors used:
primary colors: (black) #04080F  (white) #FFFFFF
secondary colors:  (blue) #032AB6 or (blue/green) #19647E
                  (dark grey) #757575  (light grey)  #DCDCDC
*/

/*Typography*/
/*Font weights:
  Bitter  400px & 700px (bold)
  Open Sans  300(thin) 400 (reg) 600 (semi-bold) 700 (bold) 800 (heavy)
  */
/* Layout styling-general*/
* {
  box-sizing: border-box;
}

.margin120 {
  margin: 120px 0;
}

.margin80 {
  margin: 80px 0;
}

.margin64 {
  margin: 64px 0;
}

.margin40 {
  margin: 40px 0;
}

.margin24 {
  margin: 24px 0;
}

.padding {
  padding: 0 8px 0 8px;
}

.blocktext {
  margin-left: auto;
  margin-right: auto;
}

/*Typography*/
body {
  font-family: open sans, sans-serif;
  font-size: 18px;
  /* Sets the font size to 18px*/
  font-weight: 400;
  line-height: 1.125em;
  color: #04080f;
  background-color: #ffffff;
}

h1,
h2,
h3 {
  font-family: bitter, serif;
  font-weight: 400;
  line-height: 1.125em;
  color: #04080f;
}

h1 {
  font-size: 1.563em;
  font-weight: 400;
}

h2 {
  font-size: 1.25em;
  font-weight: 400;
}

h3 {
  font-size: 1em;
  font-weight: 600;
}

/*images*/

img {
  width: 100%;
  margin: 0 0 24px 0;
}

/*links*/

a {
  color: #04080f;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #032ab6;
  text-decoration: none;
}

a:active {
  color: #032ab6;
  text-decoration: underline;
}

/*buttons*/
.button {
  display: inline-block;
  background-color: #ffffff;
  color: #04080f;
  border: 2px solid #04080f;
  font-weight: 400;
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
  transition-duration: 0.2s;
  transition-property: opacity;
}

.button:hover,
.button:focus {
  background-color: #04080f;
  color: #ffffff;
}

.button:active {
  background-color: #04080f;
  color: #ffffff;
  text-decoration: none;
}

/*layout styling*/
.container {
  padding: 64px 16px;
}

#hero .container {
  padding: 120px 0;
}

#navigation .container {
  padding: 0 8px;
}

.work-text h2 {
  margin-bottom: 8px;
}

.work-text h3 {
  font-weight: 400;
  font-size: 0.97em;
  color: #757575;
  margin-top: 8px;
}

#contact .container {
  padding: 8px 16px 8px 16px;
}

#contact-links .link {
  padding: 24px 0 24px 0;
}

.col-sm-6 {
  width: 50%;
}

.col-sm-4 {
  width: 33.33%;
}

.col-sm-3 {
  width: 25%;
}

[class*="col-"] {
  float: left;
  padding: 0 10px;
}

.row::after {
  content: "";
  clear: both;
  display: table;
}

#projects .row {
  padding: 24px 0 24px 0;
  border-bottom: 1px solid #757575;
}

.textAligncenter {
  text-align: center;
}

.textAlignright {
  text-align: right;
}

.textAlignleft {
  text-align: left;
}

.logo {
  max-width: 150px;
  font-family: bitter, serif;
  font-weight: 400;
  line-height: 1.125em;
  color: #04080f;
}

header {
  background-color: #ffffff;
  padding: 16px 16px;
  box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.44);
  position: fixed;
  width: 100%;
}

main {
  padding-top: 53px;
}

.navtoggle,
.navtoggle.responsive {
  position: relative;
}

.navtoggle.responsive nav {
  padding: 24px 0 0;
}

.navtoggle li .icon {
  position: absolute;
  right: 0;
  top: 2px;
  padding-right: 0;
  font-size: 20px;
  color: #04080f;
}

.navtoggle li:not(:last-child) {
  display: none;
  padding: 0;
}

.navtoggle.responsive li {
  display: block;
  padding: 16px 0;
  border-top: 1px solid #04080f;
}

nav>ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

nav>ul>li>a {
  padding: 0 8px;
  text-transform: lowercase;
  font-weight: 400;
  color: #04080f;
}

nav>ul>li>a:visited {
  text-decoration: none;
}

nav>ul>li>a:hover,
a:focus {
  color: #032ab6;
  text-decoration: none;
}

nav>ul>li>a:active {
  color: #032ab6;
  text-decoration: none;
}

#hero {
  background-color: #ffffff;
  display: inline-block;
  width: 100%;
  padding: 0 16px;
}

.hero-hello {
  padding: 0 0 40px 0;
}

#hero h3 {
  font-weight: 400;
}

/*Footer*/
.contact-text {
  padding: 0 0 64px 0;
}

.contact-links {
  text-align: left;
}

#contact .linkedin {
  height: 24px;
  width: 24px;
}

#contact .linkedin:hover,
.linkedin:focus {
  color: #757575;
}

#contact .copywrite {
  font-size: 0.8em;
}

/*About page layout*/

#intro .container {
  padding: 16px 16px 64px 16px;
}

.intro-text-2 {
  padding: 24px 0;
}

.intro-text-2 a {
  margin: 24px 0;
}

#about-images {
  padding: 40px 0;
}

/*perfect-properties layout*/
/*background-colors: (light grey) #E8E8E9,  (eggshell)  #F1E9DC
(white) #FFFFFF
 */

#pp-prototype a {
  color: #268ebc;
  display: block;
  font-size: 1.25em;
}

#pp-work .container {
  padding: 16px 16px 64px 16px;
}

#pp-work h2 {
  padding: 32px 0 32px 0;
  margin: 0;
}

#pp-intro img {
  padding: 16px 0;
}

#pp-role {
  padding: 0 0 64px 0;
}

#pp-role h3 {
  margin-bottom: 0;
  padding-bottom: 16px;
}

#pp-role p {
  display: inline-block;
  font-size: 0.9em;
  padding: 8px 0;
  margin: 0;
}

#pp-about {
  padding: 64px 8px;
}

#pp-objective {
  padding: 64px 8px;
}

#pp-mock {
  padding: 64px 8px;
}

#pp-mock-images {
  display: block;
  width: 40%;
  margin: 0 auto;
}

#pp-goals {
  padding: 64px 8px;
}

#pp-goals h3 {
  color: #2b9fd2;
}

#pp-user-flow {
  padding: 64px 8px;
}

#pp-sketch-image picture {
  display: block;
  max-width: 100%;
  width: 60%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}

#pp-wireframes {
  padding: 64px 8px;
}

#pp-styleguide {
  padding: 64px 8px;
}

#pp-animation {
  padding: 64px 8px;
}

#pp-animation .animation {
  margin: 40px 0;
}

#pp-interface h2 {
  padding: 40px 8px;
}

#pp-interface p {
  padding: 0 8px;
}

#pp-interface .row {
  padding: 64px 0;
}

#pp-prototype {
  padding: 64px 8px;
}

#pp-prototype a {
  padding: 0 0 64px 0;
}

#pp-responsive {
  padding: 64px 0 0 0;
}

.pp-responsive-images {
  padding: 0;
}

#pp-thanks {
  padding: 0 8px 64px 8px;
  display: inline-block;
  width: 100%;
}

.logo-max-width {
  max-width: 150px;
  text-align: center;
  margin: 0 auto;
  padding-top: 64px;
}
/* ... */

